fixed the issue where the mobile nav items disappear on page drag on mobile browsers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ nav a {
 .hamburger5 label {
   position: relative;
   display: block;
-  width: 3rem;
+  width: fit-content;
   /* height: 3rem; */
   margin: 0.5rem 0;
   cursor: pointer;
